fix: safe area shifts pwa body style

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -387,7 +387,6 @@
   }
 
   body {
-    padding-top: env(safe-area-inset-top, 0px);
     @apply bg-background text-foreground flex min-h-screen flex-col font-sans antialiased;
   }
 
